@@ -11,6 +11,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
+import reactor.core.publisher.Flux;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -26,29 +27,36 @@ public class ApiService {
     private final ApplicationEventPublisher applicationEventPublisher;
     private final KafKaProducerService kafKaProducerService;
     public Collection<Long> getEmployeeByUnderMangerOnlyEmId(Long emId) {
-        kafKaProducerService.sendMessage(emId.toString());
-        WebFluxResponse response = webClientBuilder.build().get()
+        // Send message to Kafka
+        //kafKaProducerService.sendMessage(emId.toString());
+
+        // Make the WebClient call
+        Flux<WebFluxResponse> responseFlux = webClientBuilder.build().get()
                 .uri("http://information-management-service/api/info/employee/getEmployeeByUnderMangerOnlyEmId",
                         uriBuilder -> uriBuilder.queryParam("emId", emId).build())
                 .retrieve()
-                .bodyToMono(WebFluxResponse.class)
-                .block();
-        if (response != null && response.getCode() == 200) {
-            JsonNode emIdList = response.getData();
-            List<Long> idList = new ArrayList<>();
-            if (emIdList.isArray()) {
-                for (JsonNode node : emIdList) {
-                    idList.add(node.asLong());
+                .bodyToFlux(WebFluxResponse.class);
+
+        // Subscribe to the flux to handle the response asynchronously
+        List<Long> idList = responseFlux.flatMap(response -> {
+            if (response.getCode() == 200) {
+                JsonNode emIdList = response.getData();
+                List<Long> ids = new ArrayList<>();
+                if (emIdList.isArray()) {
+                    for (JsonNode node : emIdList) {
+                        ids.add(node.asLong());
+                    }
                 }
+                return Flux.fromIterable(ids);
+            } else {
+                System.out.println("No employee IDs found or response status is not OK.");
+                return Flux.empty();
             }
+        }).collectList().block(); // block() here to wait for the completion and collect the list
 
-            return idList;
-
-        } else {
-            System.out.println("No employee IDs found or response status is not OK.");
-            return List.of();
-        }
+        return idList != null ? idList : Collections.emptyList();
     }
+
 
     public Collection<Long> getListAllEmployeeOnlyEmId() throws IOException {
         WebFluxResponse response = webClientBuilder.build().get()
